kustomize/overlay/dev/erlang-cookie.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ejabberd
  namespace:
  labels:
    type: statefulset
spec:
  serviceName: ejabberd
  selector:
    matchLabels:
      app: ejabberd
  template:
    metadata:
      labels:
        app: ejabberd
    spec:
      subdomain: ejabberd
      containers:
      - name: ejabberd
        volumeMounts:
        - name: cookie
          mountPath: /opt/ejabberd/.erlang.cookie
          subPath: .erlang.cookie
#          readOnly: false
      volumes:
      - name: cookie
        emptyDir:
          medium: Memory
      - name: erlang-cookie
        secret:
          secretName: erlang-cookie
